# backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: adaptation_agent.py  assessment_agent.py  content_agent.py  guardrails.py  helpper.py  language_agent.py  router_agent.py  test_agent.py  tutor_agents.py
app/agents/memory/: __init__.py
app/api/v1/: agent.py  books.py
app/core/: security.py
app/db/: connection.py
app/prompts/: adaptation_prompt.py  assesment_prompt.py  content_curator_prompt.py  language_bridge_prompt.py  safety_policy_prompt.py
app/schemas/: agent_schema.py  book_schema.py  user_schema.py
app/schemas/agents_output/: adaptation_agent_schema.py  assesment_agent_schema.py  content_agent_schema.py  guardrails_schema.py  language_agent_schema.py
app/services/: agent_service.py  books_service.py
